--- a/public_html/style.css
+++ b/public_html/style.css
@@ -14,7 +14,20 @@ and open the template in the editor.
     background-color: black;
     color: white;
     text-align: center;
+    border: 1px solid white;
+    border-radius: 5px;
+    font-family: monospace;
 }
 #code {
     display:block;
+    height: 300px;
+    color:white;
+    background-color: black;
+    font-size: 10pt;
+}
+#canvas {
+    position:absolute;
+    left: 0px;
+    top: 0px;
+    z-index: -1;
 }
